--- a/src/app/social/middle/post/post.component.html
+++ b/src/app/social/middle/post/post.component.html
@@ -1,4 +1,4 @@
-<div class="card rounded-3 border shadow-lg mt-2">
+<div class="card rounded-3 border shadow mt-2">
   <div class="card-body">
     <div class="row g-0 align-items-center">
       <div class="col-2">
