--- a/src/app/social/profile/user-posts/user-posts.component.html
+++ b/src/app/social/profile/user-posts/user-posts.component.html
@@ -3,7 +3,7 @@
 }
 
 <div class="row mt-3">
-  @if (posts.numberOfElements === 0) {
+  @if (posts.content.length === 0) {
     <div class="d-flex text-end">
       <div class="w-100 py-1 small text-muted">
         You don't have any posts!
